--- a/DeployProduction/ChurnPrediction/NN/index.html
+++ b/DeployProduction/ChurnPrediction/NN/index.html
@@ -52,6 +52,9 @@
     <input type="text" id="box12" value="87618"> x12 <br/>
     <input type="text" id="box13" value="87618"> x13 <br/>
     <input type="text" id="box14" value="87618"> x14 <br/>
+    <input type="text" id="box15" value="87618"> x15 <br/>
+    <input type="text" id="box16" value="87618"> x16 <br/>
+    <input type="text" id="box17" value="87618"> x17 <br/>
   </div>
 
   <div>
