--- a/DeployProduction/ChurnPrediction/NN/index.html
+++ b/DeployProduction/ChurnPrediction/NN/index.html
@@ -38,23 +38,23 @@
   <h1>Churn Prediction</h1>
 
   <div id="boxes1">
-    <input type="text" id="box1" value="619"> x1 <br/>
-    <input type="text" id="box2" value="42"> x2 <br/>
-    <input type="text" id="box3" value="2"> x3 <br/>
-    <input type="text" id="box4" value="0"> x4 <br/>
-    <input type="text" id="box5" value="1"> x5 <br/>
-    <input type="text" id="box6" value="101348.88"> x6 <br/>
-    <input type="text" id="box7" value="40"> x7 <br/>
-    <input type="text" id="box8" value="4"> x8 <br/>
-    <input type="text" id="box9" value="6	"> x9 <br/>
-    <input type="text" id="box10" value="1	"> x10 <br/>
-    <input type="text" id="box11" value="6"> x11 <br/>
-    <input type="text" id="box12" value="8445.740000"> x12 <br/>
-    <input type="text" id="box13" value="0"> x13 <br/>
-    <input type="text" id="box14" value="0"> x14 <br/>
-    <input type="text" id="box15" value="0"> x15 <br/>
-    <input type="text" id="box16" value="1"> x16 <br/>
-    <input type="text" id="box17" value="1"> x17 <br/>
+    <input type="text" id="box1" value=""> x1 <br/>
+    <input type="text" id="box2" value=""> x2 <br/>
+    <input type="text" id="box3" value=""> x3 <br/>
+    <input type="text" id="box4" value=""> x4 <br/>
+    <input type="text" id="box5" value=""> x5 <br/>
+    <input type="text" id="box6" value=""> x6 <br/>
+    <input type="text" id="box7" value=""> x7 <br/>
+    <input type="text" id="box8" value=""> x8 <br/>
+    <input type="text" id="box9" value=""> x9 <br/>
+    <input type="text" id="box10" value=""> x10 <br/>
+    <input type="text" id="box11" value=""> x11 <br/>
+    <input type="text" id="box12" value=""> x12 <br/>
+    <input type="text" id="box13" value=""> x13 <br/>
+    <input type="text" id="box14" value=""> x14 <br/>
+    <input type="text" id="box15" value=""> x15 <br/>
+    <input type="text" id="box16" value=""> x16 <br/>
+    <input type="text" id="box17" value=""> x17 <br/>
   </div>
 
   <div>
