--- a/DeployProduction/ChurnPrediction/NN/index.html
+++ b/DeployProduction/ChurnPrediction/NN/index.html
@@ -38,23 +38,23 @@
   <h1>Churn Prediction</h1>
 
   <div id="boxes1">
-    <input type="text" id="box1" value=""> x1 <br/>
-    <input type="text" id="box2" value=""> x2 <br/>
-    <input type="text" id="box3" value=""> x3 <br/>
-    <input type="text" id="box4" value=""> x4 <br/>
-    <input type="text" id="box5" value=""> x5 <br/>
-    <input type="text" id="box6" value=""> x6 <br/>
-    <input type="text" id="box7" value=""> x7 <br/>
-    <input type="text" id="box8" value=""> x8 <br/>
-    <input type="text" id="box9" value=""> x9 <br/>
-    <input type="text" id="box10" value=""> x10 <br/>
-    <input type="text" id="box11" value=""> x11 <br/>
-    <input type="text" id="box12" value=""> x12 <br/>
-    <input type="text" id="box13" value=""> x13 <br/>
-    <input type="text" id="box14" value=""> x14 <br/>
-    <input type="text" id="box15" value=""> x15 <br/>
-    <input type="text" id="box16" value=""> x16 <br/>
-    <input type="text" id="box17" value=""> x17 <br/>
+    <input type="text" id="box1" value=""> creditScore <br/>
+    <input type="text" id="box2" value=""> age <br/>
+    <input type="text" id="box3" value=""> tenure<br/>
+    <input type="text" id="box4" value=""> balance <br/>
+    <input type="text" id="box5" value=""> noOfProducts <br/>
+    <input type="text" id="box6" value=""> estimatedSalary <br/>
+    <input type="text" id="box7" value=""> NewAgt <br/>
+    <input type="text" id="box8" value=""> CreditScore <br/>
+    <input type="text" id="box9" value=""> AgeScore <br/>
+    <input type="text" id="box10" value=""> BalanceScore <br/>
+    <input type="text" id="box11" value=""> EstimatedSalaryScore <br/>
+    <input type="text" id="box12" value=""> NewEstimatedSalary <br/>
+    <input type="text" id="box13" value=""> geographyGermany <br/>
+    <input type="text" id="box14" value=""> geographySpain <br/>
+    <input type="text" id="box15" value=""> genderMale <br/>
+    <input type="text" id="box16" value=""> hascrcard <br/>
+    <input type="text" id="box17" value=""> isactivemember <br/>
   </div>
 
   <div>
