--- a/DeployProduction/ChurnPrediction/NN/index.html
+++ b/DeployProduction/ChurnPrediction/NN/index.html
@@ -38,23 +38,23 @@
   <h1>Churn Prediction</h1>
 
   <div id="boxes1">
-    <input type="text" id="box1" value=""> creditScore <br/>
-    <input type="text" id="box2" value=""> age <br/>
-    <input type="text" id="box3" value=""> tenure<br/>
-    <input type="text" id="box4" value=""> balance <br/>
-    <input type="text" id="box5" value=""> noOfProducts <br/>
-    <input type="text" id="box6" value=""> estimatedSalary <br/>
-    <input type="text" id="box7" value=""> NewAgt <br/>
-    <input type="text" id="box8" value=""> CreditScore <br/>
-    <input type="text" id="box9" value=""> AgeScore <br/>
-    <input type="text" id="box10" value=""> BalanceScore <br/>
-    <input type="text" id="box11" value=""> EstimatedSalaryScore <br/>
-    <input type="text" id="box12" value=""> NewEstimatedSalary <br/>
-    <input type="text" id="box13" value=""> geographyGermany <br/>
-    <input type="text" id="box14" value=""> geographySpain <br/>
-    <input type="text" id="box15" value=""> genderMale <br/>
-    <input type="text" id="box16" value=""> hascrcard <br/>
-    <input type="text" id="box17" value=""> isactivemember <br/>
+    <input type="text" id="box1" value="-0.37313433"> creditScore <br/>
+    <input type="text" id="box2" value="0.41666667"> age <br/>
+    <input type="text" id="box3" value="-1"> tenure<br/>
+    <input type="text" id="box4" value="0.32679602"> balance <br/>
+    <input type="text" id="box5" value="0"> noOfProducts <br/>
+    <input type="text" id="box6" value="0.399455"> estimatedSalary <br/>
+    <input type="text" id="box7" value="0.75"> NewAgt <br/>
+    <input type="text" id="box8" value="-0.2"> CreditScore <br/>
+    <input type="text" id="box9" value="0.5"> AgeScore <br/>
+    <input type="text" id="box10" value="0.7"> BalanceScore <br/>
+    <input type="text" id="box11" value="0.5"> EstimatedSalaryScore <br/>
+    <input type="text" id="box12" value="0.399455"> NewEstimatedSalary <br/>
+    <input type="text" id="box13" value="0"> geographyGermany <br/>
+    <input type="text" id="box14" value="1"> geographySpain <br/>
+    <input type="text" id="box15" value="0"> genderMale <br/>
+    <input type="text" id="box16" value="1"> hascrcard <br/>
+    <input type="text" id="box17" value="1"> isactivemember <br/>
   </div>
 
   <div>
