--- a/DeployProduction/ChurnPrediction/NN/index.html
+++ b/DeployProduction/ChurnPrediction/NN/index.html
@@ -1,9 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <script src="https://cdn.jsdelivr.net/npm/onnxjs/dist/onnx.min.js"></script>
-  <script src="./index.js"></script>
   <style>
     table, th, td {
       border: 1px solid;
@@ -66,5 +64,40 @@
     <div id="predictions"></div>
   </div>
 
+  <script>
+    async function runExample() {
+      // Retrieve user inputs from HTML input fields
+      var x = [];
+      for (let i = 1; i <= 17; i++) {
+        x.push(parseFloat(document.getElementById('box' + i).value));
+      }
+
+      // Create an ONNX Tensor with user inputs
+      let tensorX = new onnx.Tensor(x, 'float32', [1, 17]);
+
+      let session = new onnx.InferenceSession();
+
+      await session.loadModel("churn_prediction.onnx");
+      let outputMap = await session.run([tensorX]);
+      let outputData = outputMap.values().next().value;
+
+      // Round the output value to the nearest integer
+      let roundedOutput = Math.round(outputData.data[0]);
+
+      // Display predictions on the web page
+      let predictions = document.getElementById('predictions');
+      predictions.innerHTML = `
+        <hr> Churn Prediction Result: <br />
+        <table>
+          <tr>
+            <td>Customer exited or not</td>
+            <td id="result">${roundedOutput}</td>
+          </tr>
+        </table>
+      `;
+    }
+  </script>
+
 </body>
 </html>
+
