--- a/DeployProduction/ChurnPrediction/NN/index.html
+++ b/DeployProduction/ChurnPrediction/NN/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <script src="https://cdn.jsdelivr.net/npm/onnxjs/dist/onnx.min.js"></script>
+  <script src="./index.js"></script>
   <style>
     table, th, td {
       border: 1px solid;
